# Uncertainity-Aware-SLAM

./: CMakeLists.txt  Dockerfile  entrypoint.sh  run_docker.sh
scripts/: test_frontend.py  test_match_cov.py  test_stereo_depth.py
scripts/Frontend/: frontend.py
scripts/Matching/: matcher.py
scripts/Stereo_Depth/: stereo_depth_cov.py
scripts/Utility/: Utils.py
src/icp/include/: icp_interface.h
src/logger/: CMakeLists.txt
src/logger/include/: logger.h
src/logger/src/: logger.cpp
src/mac_vo_model/: CMakeLists.txt
src/mac_vo_model/include/: model.h
src/mac_vo_model/src/: model.cpp
src/mac_vo_model/tests/: test_mac_vo_model.cpp
src/timer/: CMakeLists.txt
src/timer/cmake/: timerConfig.cmake
src/timer/include/: rate.h  timer.h  timer_self.h
src/timer/src/: rate.cpp  timer.cpp  timer_self.cpp
src/tracking/: CMakeLists.txt
src/tracking/include/: tracking.h
src/utils/include/: configs.h  model_frames.h
